# dont-let-them-in

./: .editorconfig  .gitattributes  .gitignore  README.md  experiment_log.json
dlti_asset_pipeline/: README.md  pyproject.toml
dlti_asset_pipeline/docs/: adding_a_new_backend.md  gpu_environment_setup.md  unity_integration.md
dlti_asset_pipeline/src/dlti_asset_pipeline/: __init__.py  cli.py
dlti_asset_pipeline/src/dlti_asset_pipeline/api/: __init__.py
dlti_asset_pipeline/src/dlti_asset_pipeline/core/: __init__.py  config.py  models.py  types.py  utils.py
dlti_asset_pipeline/src/dlti_asset_pipeline/generators/: __init__.py  base.py  comfyui_backend.py  mock.py  openai_backend.py  stable_diffusion_backend.py
dlti_asset_pipeline/src/dlti_asset_pipeline/pipeline/: __init__.py  backend_registry.py  catalog_runner.py  orchestrator.py
dlti_asset_pipeline/src/dlti_asset_pipeline/postprocessing/: __init__.py  operations.py  pipeline.py
dlti_asset_pipeline/src/dlti_asset_pipeline/quality/: __init__.py  checks.py
dlti_asset_pipeline/src/dlti_asset_pipeline/reconstructors/: __init__.py  base.py  instantmesh_backend.py  mock.py  tripo_api_backend.py  triposf_backend.py  triposr_backend.py
dlti_asset_pipeline/src/dlti_asset_pipeline/registry/: __init__.py  store.py
dlti_asset_pipeline/tests/: conftest.py  test_models.py  test_pipeline_integration.py  test_postprocessing.py  test_quality.py  test_registry.py  test_styles.py
dlti_asset_pipeline/tests/fixtures/: sample_asset_catalog.yaml  sample_config.yaml  sample_style_preset.yaml
docs/: app_store_metadata.md  (+8 more)
(+142 files in other folders)
